keycloak-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  annotations:
    cloud.google.com/app-protocols: '{"http-port":"HTTP"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: keycloak
  ports:
  - name: keycloak-port
    port: 80
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:18.0.0
        args: ["start-dev"]
        ports:
        - name: keycloak-port
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /realms/master
            port: 8080
